--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.flyway.enabled= true
 spring.flyway.baseline-on-migrate= true
 spring.flyway.baseline-version= 0
 spring.flyway.table= migrations
+server.error.include-exception=true
+server.error.include-stacktrace=always
 debug=true
 springdoc.swagger-ui.path=/swagger-ui.html
