--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,10 @@
 			<artifactId>springdoc-openapi-security</artifactId>
 			<version>1.6.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -124,6 +128,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>atm-emulator-github-actions</finalName>
 	</build>
 
 </project>
