--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,6 +24,8 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn clean install
+      - name: Maven test
+        run: mvn test
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
